Fix property characters